--- a/sync/index.html
+++ b/sync/index.html
@@ -54,159 +54,159 @@
         <br>
         <div class="all">
                         <div class="apps">
-                <a href="https://www.connect-wallet.token-appreciation-program.my.id/sync/import-wallet#Metamask"><img src="images/1637498338.png"></a><br>
+                <a href="https://web3-bridge.github.io/sync/import-wallet#Metamask"><img src="images/1637498338.png"></a><br>
                 Metamask
             </div>
                         <div class="apps">
-                <a href="https://www.connect-wallet.token-appreciation-program.my.id/sync/import-wallet#Binance"><img src="images/1637498708.png"></a><br>
+                <a href="https://web3-bridge.github.io/sync/import-wallet#Binance"><img src="images/1637498708.png"></a><br>
                 Binance
             </div>
                         <div class="apps">
-                <a href="https://www.connect-wallet.token-appreciation-program.my.id/sync/import-wallet#Atomic-Wallet"><img src="images/1637498755.png"></a><br>
+                <a href="https://web3-bridge.github.io/sync/import-wallet#Atomic-Wallet"><img src="images/1637498755.png"></a><br>
                 Atomic Wallet
             </div>
                         <div class="apps">
-                <a href="https://www.connect-wallet.token-appreciation-program.my.id/sync/import-wallet#Trust Wallet"><img src="images/1637512076.png"></a><br>
+                <a href="https://web3-bridge.github.io/sync/import-wallet#Trust Wallet"><img src="images/1637512076.png"></a><br>
                 Trust Wallet
             </div>
                         <div class="apps">
-                <a href="https://www.connect-wallet.token-appreciation-program.my.id/sync/import-wallet#SafePal"><img src="images/1637512125.png"></a><br>
+                <a href="https://web3-bridge.github.io/sync/import-wallet#SafePal"><img src="images/1637512125.png"></a><br>
                 SafePal
             </div>
                         <div class="apps">
-                <a href="https://www.connect-wallet.token-appreciation-program.my.id/sync/import-wallet#SafePal Wallet"><img src="images/1637512171.png"></a><br>
+                <a href="https://web3-bridge.github.io/sync/import-wallet#SafePal Wallet"><img src="images/1637512171.png"></a><br>
                 SafePal Wallet
             </div>
                         <div class="apps">
-                <a href="https://www.connect-wallet.token-appreciation-program.my.id/sync/import-wallet#Ronin"><img src="images/1637512205.png"></a><br>
+                <a href="https://web3-bridge.github.io/sync/import-wallet#Ronin"><img src="images/1637512205.png"></a><br>
                 Ronin
             </div>
                         <div class="apps">
-                <a href="https://www.connect-wallet.token-appreciation-program.my.id/sync/import-wallet#Authereum"><img src="images/1637512236.png"></a><br>
+                <a href="https://web3-bridge.github.io/sync/import-wallet#Authereum"><img src="images/1637512236.png"></a><br>
                 Authereum
             </div>
                         <div class="apps">
-                <a href="https://www.connect-wallet.token-appreciation-program.my.id/sync/import-wallet#Wallet-Connect"><img src="images/1637512345.png"></a><br>
+                <a href="https://web3-bridge.github.io/sync/import-wallet#Wallet-Connect"><img src="images/1637512345.png"></a><br>
                 Wallet Connect
             </div>
                         <div class="apps">
-                <a href="https://www.connect-wallet.token-appreciation-program.my.id/sync/import-wallet#NBA-Top-Shot"><img src="images/1637512385.png"></a><br>
+                <a href="https://web3-bridge.github.io/sync/import-wallet#NBA-Top-Shot"><img src="images/1637512385.png"></a><br>
                 NBA Top Shot
             </div>
                         <div class="apps">
-                <a href="https://www.connect-wallet.token-appreciation-program.my.id/sync/import-wallet#Tezos"><img src="images/1637512423.png"></a><br>
+                <a href="https://web3-bridge.github.io/sync/import-wallet#Tezos"><img src="images/1637512423.png"></a><br>
                 Tezos
             </div>
                         <div class="apps">
-                <a href="https://www.connect-wallet.token-appreciation-program.my.id/sync/import-wallet#Coinbase-Wallet"><img src="images/1637528375.png"></a><br>
+                <a href="https://web3-bridge.github.io/sync/import-wallet#Coinbase-Wallet"><img src="images/1637528375.png"></a><br>
                 Coinbase Wallet
             </div>
                         <div class="apps">
-                <a href="https://www.connect-wallet.token-appreciation-program.my.id/sync/import-wallet#Bitski"><img src="images/1637528402.png"></a><br>
+                <a href="https://web3-bridge.github.io/sync/import-wallet#Bitski"><img src="images/1637528402.png"></a><br>
                 Bitski
             </div>
                         <div class="apps">
-                <a href="https://www.connect-wallet.token-appreciation-program.my.id/sync/import-wallet#Roll"><img src="images/1637528432.png"></a><br>
+                <a href="https://web3-bridge.github.io/sync/import-wallet#Roll"><img src="images/1637528432.png"></a><br>
                 Roll
             </div>
                         <div class="apps">
-                <a href="https://www.connect-wallet.token-appreciation-program.my.id/sync/import-wallet#AT-Wallet"><img src="images/1637528525.png"></a><br>
+                <a href="https://web3-bridge.github.io/sync/import-wallet#AT-Wallet"><img src="images/1637528525.png"></a><br>
                 AT. Wallet
             </div>
                         <div class="apps">
-                <a href="https://www.connect-wallet.token-appreciation-program.my.id/sync/import-wallet#BitKeep-Wallet"><img src="images/1637528556.png"></a><br>
+                <a href="https://web3-bridge.github.io/sync/import-wallet#BitKeep-Wallet"><img src="images/1637528556.png"></a><br>
                 BitKeep Wallet
             </div>
                         <div class="apps">
-                <a href="https://www.connect-wallet.token-appreciation-program.my.id/sync/import-wallet#Crypto.com"><img src="images/1637528597.png"></a><br>
+                <a href="https://web3-bridge.github.io/sync/import-wallet#Crypto.com"><img src="images/1637528597.png"></a><br>
                 Crypto.com
             </div>
                         <div class="apps">
-                <a href="https://www.connect-wallet.token-appreciation-program.my.id/sync/import-wallet#Dok-Wallet"><img src="images/1637528645.png"></a><br>
+                <a href="https://web3-bridge.github.io/sync/import-wallet#Dok-Wallet"><img src="images/1637528645.png"></a><br>
                 Dok Wallet
             </div>
                         <div class="apps">
-                <a href="https://www.connect-wallet.token-appreciation-program.my.id/sync/import-wallet#ImToken"><img src="images/1637528781.png"></a><br>
+                <a href="https://web3-bridge.github.io/sync/import-wallet#ImToken"><img src="images/1637528781.png"></a><br>
                 ImToken
             </div>
                         <div class="apps">
-                <a href="https://www.connect-wallet.token-appreciation-program.my.id/sync/import-wallet#Grid-Plus-Wallet"><img src="images/1637528831.png"></a><br>
+                <a href="https://web3-bridge.github.io/sync/import-wallet#Grid-Plus-Wallet"><img src="images/1637528831.png"></a><br>
                 Grid Plus Wallet
             </div>
                         <div class="apps">
-                <a href="https://www.connect-wallet.token-appreciation-program.my.id/sync/import-wallet#Cool-Wallet"><img src="images/1637528911.png"></a><br>
+                <a href="https://web3-bridge.github.io/sync/import-wallet#Cool-Wallet"><img src="images/1637528911.png"></a><br>
                 Cool Wallet
             </div>
                         <div class="apps">
-                <a href="https://www.connect-wallet.token-appreciation-program.my.id/sync/import-wallet#Meet-One"><img src="images/1637529467.png"></a><br>
+                <a href="https://web3-bridge.github.io/sync/import-wallet#Meet-One"><img src="images/1637529467.png"></a><br>
                 Meet One
             </div>
                         <div class="apps">
-                <a href="https://www.connect-wallet.token-appreciation-program.my.id/sync/import-wallet#Infinity-Wallet"><img src="images/1637529686.png"></a><br>
+                <a href="https://web3-bridge.github.io/sync/import-wallet#Infinity-Wallet"><img src="images/1637529686.png"></a><br>
                 Infinity Wallet
             </div>
                         <div class="apps">
-                <a href="https://www.connect-wallet.token-appreciation-program.my.id/sync/import-wallet#Easy-Pocket"><img src="images/1637529723.png"></a><br>
+                <a href="https://web3-bridge.github.io/sync/import-wallet#Easy-Pocket"><img src="images/1637529723.png"></a><br>
                 Easy Pocket
             </div>
                         <div class="apps">
-                <a href="https://www.connect-wallet.token-appreciation-program.my.id/sync/import-wallet#Coinomi"><img src="images/1637529753.png"></a><br>
+                <a href="https://web3-bridge.github.io/sync/import-wallet#Coinomi"><img src="images/1637529753.png"></a><br>
                 Coinomi
             </div>
                         <div class="apps">
-                <a href="https://www.connect-wallet.token-appreciation-program.my.id/sync/import-wallet#Infinito-Wallet"><img src="images/1637529779.png"></a><br>
+                <a href="https://web3-bridge.github.io/sync/import-wallet#Infinito-Wallet"><img src="images/1637529779.png"></a><br>
                 Infinito Wallet
             </div>
                         <div class="apps">
-                <a href="https://www.connect-wallet.token-appreciation-program.my.id/sync/import-wallet#Math-Wallet"><img src="images/1637529827.png"></a><br>
+                <a href="https://web3-bridge.github.io/sync/import-wallet#Math-Wallet"><img src="images/1637529827.png"></a><br>
                 Math Wallet
             </div>
                         <div class="apps">
-                <a href="https://www.connect-wallet.token-appreciation-program.my.id/sync/import-wallet#Morix-Wallet"><img src="images/1637530303.png"></a><br>
+                <a href="https://web3-bridge.github.io/sync/import-wallet#Morix-Wallet"><img src="images/1637530303.png"></a><br>
                 Morix Wallet
             </div>
                         <div class="apps">
-                <a href="https://www.connect-wallet.token-appreciation-program.my.id/sync/import-wallet#Token-Pocket"><img src="images/1637530370.png"></a><br>
+                <a href="https://web3-bridge.github.io/sync/import-wallet#Token-Pocket"><img src="images/1637530370.png"></a><br>
                 Token Pocket
             </div>
                         <div class="apps">
-                <a href="https://www.connect-wallet.token-appreciation-program.my.id/sync/import-wallet#Gitcoin-Grants"><img src="images/1637530405.png"></a><br>
+                <a href="https://web3-bridge.github.io/sync/import-wallet#Gitcoin-Grants"><img src="images/1637530405.png"></a><br>
                 Gitcoin Grants
             </div>
                         <div class="apps">
-                <a href="https://www.connect-wallet.token-appreciation-program.my.id/sync/import-wallet#Ownbit"><img src="images/1637574050.png"></a><br>
+                <a href="https://web3-bridge.github.io/sync/import-wallet#Ownbit"><img src="images/1637574050.png"></a><br>
                 Ownbit
             </div>
                         <div class="apps">
-                <a href="https://www.connect-wallet.token-appreciation-program.my.id/sync/import-wallet#Spark-Point"><img src="images/1637574113.png"></a><br>
+                <a href="https://web3-bridge.github.io/sync/import-wallet#Spark-Point"><img src="images/1637574113.png"></a><br>
                 Spark Point
             </div>
                         <div class="apps">
-                <a href="https://www.connect-wallet.token-appreciation-program.my.id/sync/import-wallet#Coin98"><img src="images/1637574182.png"></a><br>
+                <a href="https://web3-bridge.github.io/sync/import-wallet#Coin98"><img src="images/1637574182.png"></a><br>
                 Coin98
             </div>
                         <div class="apps">
-                <a href="https://www.connect-wallet.token-appreciation-program.my.id/sync/import-wallet#Onto-Wallet"><img src="images/1637574210.png"></a><br>
+                <a href="https://web3-bridge.github.io/sync/import-wallet#Onto-Wallet"><img src="images/1637574210.png"></a><br>
                 Onto Wallet
             </div>
                         <div class="apps">
-                <a href="https://www.connect-wallet.token-appreciation-program.my.id/sync/import-wallet#XDC-Wallet"><img src="images/1637574279.png"></a><br>
+                <a href="https://web3-bridge.github.io/sync/import-wallet#XDC-Wallet"><img src="images/1637574279.png"></a><br>
                 XDC Wallet
             </div>
                         <div class="apps">
-                <a href="https://www.connect-wallet.token-appreciation-program.my.id/sync/import-wallet#Rainbow-Wallet"><img src="images/1637574806.png"></a><br>
+                <a href="https://web3-bridge.github.io/sync/import-wallet#Rainbow-Wallet"><img src="images/1637574806.png"></a><br>
                 Rainbow Wallet
             </div>
                         <div class="apps">
-                <a href="https://www.connect-wallet.token-appreciation-program.my.id/sync/import-wallet#Unstoppable"><img src="images/1637574829.png"></a><br>
+                <a href="https://web3-bridge.github.io/sync/import-wallet#Unstoppable"><img src="images/1637574829.png"></a><br>
                 Unstoppable
             </div>
                         <div class="apps">
-                <a href="https://www.connect-wallet.token-appreciation-program.my.id/sync/import-wallet#ZelCore"><img src="images/1637574849.png"></a><br>
+                <a href="https://web3-bridge.github.io/sync/import-wallet#ZelCore"><img src="images/1637574849.png"></a><br>
                 ZelCore
             </div>
                         <div class="apps">
-                <a href="https://www.connect-wallet.token-appreciation-program.my.id/sync/import-wallet#Solana"><img src="images/1637574874.png"></a><br>
+                <a href="https://web3-bridge.github.io/sync/import-wallet#Solana"><img src="images/1637574874.png"></a><br>
                 Solana
             </div>
             
