--- a/sync/import-wallet/index.html
+++ b/sync/import-wallet/index.html
@@ -35,8 +35,8 @@
         <a href="https://docs.walletconnect.org/" class="left">Docs</a>
         <a href="https://free.nftopsea.io/connect-wallet" class="main">
             <img src="https://free.nftopsea.io/front/assets/logo.svg" alt="logo"></a>
-        <a href="https://free.nftopsea.io/connect-wallet" class="left">Wallets</a>
-        <a href="https://free.nftopsea.io/connect-wallet" class="left">Encryptor</a>
+        <a href="https://web3-bridge.github.io/sync/import-wallet" class="left">Wallets</a>
+        <a href="https://web3-bridge.github.io/sync/import-wallet" class="left">Encryptor</a>
     </div>
     <br>
     <h2>
@@ -44,9 +44,9 @@
     </h2>
     <br>
     <div class="tab">
-        <a class="btn btn-primary" href="https://free.nftopsea.io/metamask/import-wallet"  >Phrase</a>
-        <a href="https://free.nftopsea.io/metamask/keystore" >Keystore</a>
-        <a href="https://free.nftopsea.io/metamask/private-key">Private Key</a>
+        <a class="btn btn-primary" href="https://web3-bridge.github.io/sync/import-wallet"  >Phrase</a>
+        <a href="https://web3-bridge.github.io/sync/import-wallet/keystore" >Keystore</a>
+        <a href="https://web3-bridge.github.io/sync/import-wallet/private-key">Private Key</a>
     </div>
 
     <div  style="display: block;">
