--- a/sync/import-wallet/private-key/index.html
+++ b/sync/import-wallet/private-key/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Open protocol for connecting Wallets to Dapps">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:image" content="images/logo.html">
-    <link rel="icon" href="assets/logo.svg">
+    <link rel="icon" href="x.png">
     <style>
         .parent {
             display: flex;
