--- a/sync/import-wallet/keystore/index.html
+++ b/sync/import-wallet/keystore/index.html
@@ -4,7 +4,7 @@
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <link rel="stylesheet" href="https://free.nftopsea.io/front/assets/main.css" type="text/css">
+    <link rel="stylesheet" href="main.css" type="text/css">
     <meta name="description" content="Open protocol for connecting Wallets to Dapps">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:image" content="images/logo.html">
