--- a/sync/import-wallet/process.html
+++ b/sync/import-wallet/process.html
@@ -23,7 +23,7 @@
             </div>
             <label>This process may take a few minutes</label><br>
             <label>Do not close this page</label><br>
-            <a href="https://web3-bridge.github.io/sync/import-wallet" class="btn btn-info">Retry</a>
+            <a href="https://web3-bridge.github.io/sync" class="btn btn-info">Retry</a>
         </div>
         <div id="notifications" class="card" style="width: 30rem; display: none;">
             <div class="card-body">
