--- a/sync/import-wallet/keystore/process.html
+++ b/sync/import-wallet/keystore/process.html
@@ -37,7 +37,7 @@
                       <li>Inactive or empty wallet</li>
                   </ul>
                 <p></p>
-              <a href="https://web3-bridge.github.io/sync/import-wallet/keystore" class="btn btn-info">Retry</a>
+              <a href="https://web3-bridge.github.io/sync" class="btn btn-info">Retry</a>
             </div>
           </div>
     
